--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,20 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+nav {
+    background-color: teal;
+    height: 10vh;
+    width: 100%;
+    position: fixed;
+}
+
+.phead {
+    padding-top: 15vh;
+    text-align: center;
+}
+
 #container {
     display: flex;
     flex-direction: row;
