--- a/css/main.css
+++ b/css/main.css
@@ -24,22 +24,44 @@ nav {
 
 .MainDiv {
     border: 2px solid black;
+    border-radius: 10px;
     margin: 2vh;
     padding: 2vh;
     width: 75vh;
+    background-color: #005555;
 }
 
 .pee {
     font-weight: bolder;
     text-align: center;
+    color: white;
 }
 
 .peeno {
-    /* font-weight: bolder; */
     text-align: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 2vh;
-    /* width: 20vh; */
+    color: white;
+}
+
+.peenoa {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 2vh;
+    text-decoration: none;
+    color: black;
+    border: solid 2px black;
+    padding: 1vh;
+    width: 50vh;
+    margin-left: 13.5%;
+    border-radius: 10px;
+    background-color: white;
+}
+
+.peenoa:hover {
+    background-color: #00ccff;
+    color: black;
 }
