--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ nav {
         border: solid 2px black;
         padding: 1vh;
         width: 35vh;
-        /* margin-left: 8%; */
+        margin-left: 5%;
         border-radius: 10px;
         background-color: white;
     }
